--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 
 title: Chirpy                          # the main title
 
-tagline: A text-focused Jekyll theme.  # it will display as the sub-title
+tagline: Musings and observations.  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, portfolio, sidebar,
@@ -24,8 +24,8 @@ author: Adrish Banerjee                  # change to your full name
 
 avatar: /assets/img/sample/avatar.jpeg   # support internet resources
 
-github:
-  username: drybeluga             # change to your github username
+# github:
+#   username: drybeluga             # change to your github username
 
 twitter:
   username: drybeluga            # change to your twitter username
@@ -65,8 +65,8 @@ google_analytics:
     cache: false  # pv data local cache, good for the users from GFW area.
 
 disqus:
-  comments: false  # boolean type, the global switch for posts comments.
-  shortname: ''    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+  comments: true  # boolean type, the global switch for posts comments.
+  shortname: 'drybeluga'    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 
 # Prefer color scheme setting, available values:
