--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 #--------------------------
 
-title:                           # the main title
+title: Rationally irrational                           # the main title
 
 tagline: Musings and observations.  # it will display as the sub-title
 
